@@ -1,39 +1,39 @@
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.11"
+    id "org.jetbrains.kotlin.jvm" version "1.3.72"
 }
 
 apply(from: "$gradleScripts/kotlin.gradle")
-apply(from: "$gradleScripts/service.gradle")
+apply(from: "$gradleScripts/application.gradle")
 
 apply(plugin: "war")
 
 defaultTasks("installDist")
 
-mainClassName = "com.hexagonkt.BenchmarkKt"
-applicationDefaultJvmArgs = [ "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts" ]
+application {
+    mainClassName = "com.hexagonkt.BenchmarkKt"
+}
 
 war {
-    archiveName = "ROOT.war"
+    archiveFileName = "ROOT.war"
 }
 
 installDist.dependsOn("war")
 
 dependencies {
-    compile("com.hexagonkt:store_mongodb:$hexagonVersion")
-    compile("com.hexagonkt:http_server_jetty:$hexagonVersion")
-    compile("com.hexagonkt:templates_pebble:$hexagonVersion")
+    implementation("com.hexagonkt:store_mongodb:$hexagonVersion")
+    implementation("com.hexagonkt:http_server_jetty:$hexagonVersion")
+    implementation("com.hexagonkt:templates_pebble:$hexagonVersion")
 
-    compile("com.zaxxer:HikariCP:$hikariVersion")
-    compile("org.postgresql:postgresql:$postgresqlVersion")
+    implementation("com.zaxxer:HikariCP:$hikariVersion")
+    implementation("org.postgresql:postgresql:$postgresqlVersion")
+
+    implementation("org.slf4j:slf4j-jdk14:1.7.30")
+    runtimeOnly("org.slf4j:jcl-over-slf4j:1.7.30")
+    runtimeOnly("org.slf4j:log4j-over-slf4j:1.7.30")
 
     // providedCompile excludes the dependency only in the WAR, not in the distribution
     providedCompile("org.eclipse.jetty:jetty-webapp:$jettyVersion") { exclude module: "slf4j-api" }
 
-    testCompile("com.hexagonkt:port_http_client:$hexagonVersion")
-    testCompile("org.testng:testng:$testngVersion")
-}
-
-test {
-    useTestNG()
+    testImplementation("com.hexagonkt:http_client_ahc:$hexagonVersion")
 }
